[update] sdk 와 test용 앱간의 package 명이 같아서 R 선언에 오류가 남 test 앱 package 명과 directory 명 변경

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,6 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "PermissionChecker"
+rootProject.name = "PermissionCheckerApp"
 include ':app'
 include ':PermissionChecker'
