--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.uwange.permissionchecker'
+    namespace 'com.uwange.app'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.uwange.permissionchecker"
+        applicationId "com.uwange.app"
         minSdk 29
         targetSdk 34
         versionCode 1
